--- a/main.html
+++ b/main.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<main>
+		<h1>This is a Heading</h1>
+	</main>
     <script type="text/javascript" src="./script.js">
 </script>
 
