--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-	<main>
-		<h1>This is a Heading</h1>
+	<main class="main">
+		<h1 id="heading">This is a Heading</h1>
 	</main>
     <script type="text/javascript" src="./script.js">
 </script>
