--- a/main.html
+++ b/main.html
@@ -7,9 +7,9 @@
 </head>
 
 <body>
-	<main class="main">
-		<h1 id="heading">This is a Heading</h1>
-	</main>
+	<div class="main">
+		<h2 id="heading"><u>This is a Heading</u></h2>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
